--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 
 	/* --- database --- */
-	runtimeOnly 'com.h2database:h2'
+	implementation 'mysql:mysql-connector-java:8.0.28'
 	testRuntimeOnly 'com.h2database:h2'
 
 	/* --- 추가 --- */
