--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,18 +21,12 @@ spring:
 
   datasource:
     generate-unique-name: false
-    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${DB_URL}
     username: ${DB_USER}
     password: ${DB_PASS}
     hikari:
       maximum-pool-size: ${DB_POOL_SIZE:1}
-
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-
 
 # 로그 설정
 logging:
